<resources>
    <string name="app_name">婚车多多车主端</string>

    <string name="tab_login">登录</string>
    <string name="register_immediate">立即注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="hint_input_mobile">请输入手机号</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_verify_code">请输入验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="hint_input_register_password">请输入8-20位密码</string>
    <string name="hint_input_register_password_again">请再次输入密码</string>
    <string name="hint_input_new_password">请输入8-20位新密码</string>
    <string name="hint_input_new_password_again">请再次输入新密码</string>
    <string name="text_complete">完成</string>

    <string name="tab_title_order">订单</string>
    <string name="tab_title_my">我的</string>
    <string name="tab_running">进行中</string>
    <string name="tab_wait">待通过</string>
    <string name="tab_complete">已完成</string>
    <string name="tab_invalid">已失效</string>
    <string name="today_order">今日订单</string>

    <string name="text_order_num">%s单\n出车日历</string>
    <string name="text_evaluate">%s星\n客户评价</string>
    <string name="text_income">%s元\n累计收入</string>
    <string name="text_complete_order">%s单\n完成订单</string>
    <string name="text_mine_car_model">%s(%s)</string>
    <string name="text_order_number">已接单%s次</string>
    <string name="text_balance_detail_money">%s元</string>
    <string name="text_balance_detail_order">(订单号：%s)</string>
    <string name="empty_order_list">暂无当前状态订单</string>
    <string name="sign_up_car">查看报名车辆</string>

    <string name="city_name">上海市</string>
    <string name="robbing_my_type">我的车型</string>
    <string name="robbing_all_type">全部车型</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="text_order_id">订单号：%s</string>
    <string name="order_info_title">订单详情</string>

    <string name="permission_tip">正在请求权限</string>
    <string name="text_calendar_red">红色背景表示当天已有订单</string>
    <string name="text_calendar_orange">橙色背景表示当天无法接单</string>
    <string name="text_allowed_money">可提现金额%s元</string>

</resources>
