<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="@dimen/dimen_10"
        android:background="@color/bg_white"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:background="@null"
            android:drawableLeft="@drawable/logoin_icon_num"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_input_mobile"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_main_gray"
            android:textSize="14sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/divide_main_gray"/>
    <LinearLayout
        android:id="@+id/ll_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_11"
        android:paddingRight="@dimen/dimen_15"
        android:background="@color/bg_white"
        android:orientation="horizontal"
        android:gravity="center">
        <EditText
            android:id="@+id/et_verify_code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:background="@null"
            android:drawableLeft="@drawable/icon_verification_code"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:inputType="number"
            android:hint="@string/hint_input_verify_code"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_main_gray"
            android:textSize="@dimen/sp_14"/>

        <com.weddingcar.driver.common.ui.VerifyCodeView
            android:id="@+id/vcv_code"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/selector_button_verify_code_gray"
            android:gravity="center"
            android:text="@string/get_verify_code"
            android:textColor="@color/text_white"
            android:textSize="@dimen/sp_13"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divide_main_gray"/>

    <Button
        android:id="@+id/btn_next_step"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="@dimen/dimen_10"
        android:layout_marginLeft="@dimen/dimen_15"
        android:layout_marginRight="@dimen/dimen_15"
        android:layout_marginTop="@dimen/dimen_25"
        android:background="@drawable/shape_button_red"
        android:gravity="center"
        android:text="@string/next_step"
        android:textColor="@color/text_white"
        android:textSize="@dimen/sp_17"/>

</LinearLayout>