<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/dimen_20"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_25"
        android:paddingRight="@dimen/dimen_25">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@null"
            android:drawableLeft="@drawable/logoin_icon_num"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_input_mobile"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_main_gray"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/dimen_25"
        android:layout_marginRight="@dimen/dimen_25"
        android:background="@color/divide_main_gray" />

    <LinearLayout
        android:id="@+id/ll_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_25"
        android:paddingRight="@dimen/dimen_25">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@null"
            android:drawableLeft="@drawable/logoin_icon_pas"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_input_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_main_gray"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/dimen_25"
        android:layout_marginRight="@dimen/dimen_25"
        android:background="@color/divide_main_gray" />

    <Button
        android:id="@+id/btn_go"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="@dimen/dimen_10"
        android:layout_marginLeft="@dimen/dimen_25"
        android:layout_marginRight="@dimen/dimen_25"
        android:layout_marginTop="25dp"
        android:enabled="false"
        android:background="@drawable/selector_button_red"
        android:gravity="center"
        android:text="@string/tab_login"
        android:textColor="@color/text_white"
        android:textSize="@dimen/sp_17" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_25"
        android:layout_marginRight="@dimen/dimen_25"
        android:layout_marginTop="@dimen/dimen_10">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_8"
            android:gravity="center"
            android:text="@string/register_immediate"
            android:textColor="@color/text_main_red"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_8"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="@color/text_main_red"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dimen_20"
        android:gravity="center_horizontal|bottom"
        android:textColor="@color/text_white"
        android:textSize="@dimen/sp_12"
        android:visibility="gone" />

</LinearLayout>