<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_new_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="@dimen/dimen_10"
        android:background="@color/bg_white"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/hint_input_new_password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/logoin_icon_pas"
            android:drawablePadding="@dimen/dimen_8"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_main_gray"
            android:textSize="14sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/divide_main_gray"/>
    <LinearLayout
        android:id="@+id/ll_again_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_10"
        android:background="@color/bg_white"
        android:orientation="horizontal"
        android:gravity="center">
        <EditText
            android:id="@+id/et_again_pwd"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:background="@null"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/logoin_icon_pas"
            android:drawablePadding="@dimen/dimen_8"
            android:hint="@string/hint_input_new_password_again"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_main_gray"
            android:textSize="@dimen/sp_14"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divide_main_gray"/>

    <Button
        android:id="@+id/btn_ensure"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="@dimen/dimen_10"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_button_red"
        android:gravity="center"
        android:text="@string/text_complete"
        android:textColor="@color/text_white"
        android:textSize="@dimen/sp_17"/>

</LinearLayout>