<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ll_mine"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_main_red"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_20"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.weddingcar.driver.common.ui.CircleImageView
                android:id="@+id/iv_head"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/my_head"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="张师傅"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/sp_18"
                    android:layout_marginBottom="@dimen/dimen_5"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:text="奥迪A6(黑色)"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/text_white"/>
                
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_3"
                    android:src="@drawable/nav_information"
                    android:layout_marginBottom="@dimen/dimen_15"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_3"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:src="@drawable/ic_code"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_order_num"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:lines="2"
                android:lineSpacingExtra="@dimen/dimen_5"
                android:padding="@dimen/dimen_5"
                android:gravity="center_horizontal"
                android:text="@string/text_order_num"
                android:textColor="@color/text_white"
                android:textSize="@dimen/sp_12"/>
            <TextView
                android:id="@+id/tv_evaluate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:lines="2"
                android:lineSpacingExtra="@dimen/dimen_5"
                android:padding="@dimen/dimen_5"
                android:gravity="center_horizontal"
                android:text="@string/text_evaluate"
                android:textColor="@color/text_white"
                android:textSize="@dimen/sp_12"/>
            <TextView
                android:id="@+id/tv_income"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:lines="2"
                android:lineSpacingExtra="@dimen/dimen_5"
                android:padding="@dimen/dimen_5"
                android:gravity="center_horizontal"
                android:text="@string/text_income"
                android:textColor="@color/text_white"
                android:textSize="@dimen/sp_12"/>
            <TextView
                android:id="@+id/tv_complete_order"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:lines="2"
                android:lineSpacingExtra="@dimen/dimen_5"
                android:padding="@dimen/dimen_5"
                android:gravity="center_horizontal"
                android:text="@string/text_complete_order"
                android:textColor="@color/text_white"
                android:textSize="@dimen/sp_12"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>

</LinearLayout>